# naVShorts

./: .gitignore  CHANGELOG.md  README.md  README_JP.md  index.html  meta.json  package-lock.json  package.json  run_navshorts.bat  tailwind.config.js  vite.config.js
.github/: copilot-instructions.md
docs/screenshots/: README.md
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/models/: README.md
src-tauri/scripts/: identity_track.py  person_bytetrack_arcface.py  person_track.py  score_face_folder.py
src-tauri/src/: core.rs  lib.rs  main.rs  media.rs
src-tauri/tests/: integration_ffmpeg.rs
src/features/motion/: MotionWorkspace.jsx
src/features/preReframe/: PreReframeWorkspace.jsx
src/features/reframe/: ReframeWorkspace.jsx
src/features/settings/: SettingsWorkspace.jsx
src/lib/: tauri.js
ui/: app.js  index.html  reframe.html  reframe.js  reframe_assist.html  reframe_assist.js  settings.html  settings.js  styles.css
